--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <center>
         <nav>
                <ul class="navigation">
                   <a href="#C1" class="AHo">Home</a>
@@ -26,76 +25,51 @@
          <h1 id="C1"class="denisnov">Denis Novik</h1>
        </header>
        <img src="photox940.jpg" alt="photo" class="photoman">
-     <section>
-         <h2 id="C2" class="about">About me</h2>
-         <p class="aboutpar">Hi, I'm Denis – UX/UI designer from Minsk. <br>
-             I'm interested in design and everything connected with it. <br>
-             <br>
-             I'm studying at courses "Web and mobile design <br>
-             interfaces" in IT-Academy. <br>
-             <br>
-             Ready to implement excellent projects <br>
-              with wonderful people.
-         </p>
-     </section>
+       <div class="backgr">
+           <section>
+               <h2 id="C2" class="about">About me</h2>
+               <p class="aboutpar">Hi, I'm Denis – UX/UI designer from Minsk.<br>
+                  I'm interested in design and everything connected with it.</p>
+                <p class="courses">I'm studying at courses "Web and mobile design <br>
+                    interfaces" in IT-Academy.</p> 
+                <p class="projects">Ready to implement excellent projects <br>
+                    with wonderful people</p> 
+        
+           </section>
+       </div>
      <section>
          <h2 id="C3" class="Skills">Skills</h2>
          <p class="Skillspar">I work in such programs as</p>
-         <br>
-         <br>
          <div class="pic">
              <img src="Ps.svg" alt="adobephotoshop" class="Ps">
              <img src="Ai.svg" alt="adobeillustrator" class="Ai">
              <img src="AF.svg" alt="adobeaftereffect" class="AF">
              <img src="Figma.svg" alt="Figma" class="Figma">
-         </img>
+         </div>
      </section>
-     <br>
-     <br>
-     <br>
-     <section>
+     <section class="background">
          <h2 id="C4" class="Portfolio">Portfolio</h2>
-         <br>
-         <br>
          <img src="Fashion-Store.png" alt="Fashion-Store" class="Fashion-Store">
          <p class="FS-HP">Online fashion store - Homepage</p>
-         <br>
-         <br>
          <img src="reebok_web.png" alt="reebok_web" class="reebok_web">
-         <br>
          <p class="RC-C">Reebok Store - Concept</p>
-         <br>
-         <br>
-         <br>
          <img src="braun-landing.png" alt="braun-landing" class="braun-landing">
          <p class="BLP-C">Braun Landing Page - Concept</p>
-         </section>
-         <section>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-             <h2 id="C5" class="Contacts">Contacts</h2>
-             <p class="Contactspar">Want to know more or just chat? <br>
-                You are welcome!</p>
-                <br>
-                <br>
-             <button class="button"><p class="text">Send message</p></button>
-             <br>
-             <br>
-             <img src="linkedin.svg" alt="linkedin" class="linkedin">
-             <img src="instagram.svg" alt="instagram" class="instagram">
-             <img src="behance.svg" alt="behance" class="behance">
-             <img src="dribbble.svg" alt="dribbble" class="dribbble">
-         </section>
-         <br>
-         <br>
+     </section>
+        <section> 
+            <h2 id="C5" class="Contacts">Contacts</h2>
+            <p class="Contactspar">Want to know more or just chat? <br>
+               You are welcome!</p>
+           <button class="button"><p class="text">Send message</p></button>
+            <img src="linkedin.svg" alt="linkedin" class="linkedin">
+            <img src="instagram.svg" alt="instagram" class="instagram">
+            <img src="behance.svg" alt="behance" class="behance">
+            <img src="dribbble.svg" alt="dribbble" class="dribbble">
+        </section> 
          <footer>
              <p class="end">Like me on <br>
                 LinkedIn, Instagram, Behance, <br>
                 Dribble</p>
          </footer>
-    </img> 
 </body>
 </html>
